--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="icon" type="image/png" href="/Users/fabiennehalloin/Desktop/3Ts/Website/image 3.png">
         <title>Tea, Tales & Tender Hearts</title>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="/Users/fabiennehalloin/Desktop/3Ts/Website/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,800&family=Fondamento:ital@0;1&display=swap" rel="stylesheet">
