--- a/Index.html
+++ b/Index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="icon" type="image/png" href="/Users/fabiennehalloin/Desktop/3Ts/Website/image 3.png">
         <title>Tea, Tales & Tender Hearts</title>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="/Users/fabiennehalloin/Desktop/3Ts/Website/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,800&family=Fondamento:ital@0;1&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,800&family=Fondamento:ital@0;1&family=Solway:wght@300;400;500;700;800&display=swap" rel="stylesheet">
-        <script src="/Users/fabiennehalloin/Desktop/3Ts/Website/script.js" defer></script>
+        <script src="scripts/script.js" defer></script>
     </head>
     <body>
         <header>
             <div class="leftside">
                 <div>
-                    <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/logo.png">
+                    <img src="Images/logo.png">
                 </div>
                 <div><h1>Tea, Tales & Tender Hearts</h1></div>
             </div>
             <div class="nav">
                 <div class=menu>
-                    <h3><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/index.html" target="_blank" rel="noopener noreferrer">Homepage</a></h3>
+                    <h3><a href="index.html" target="_blank" rel="noopener noreferrer">Homepage</a></h3>
                     <ul>
                         <li><a href="#readingchallenges">Reading Challenges</a></li>
                         <li><a href="#monthlyread">Monthly Read</a></li>
@@ -31,19 +30,19 @@
                     </ul>
                 </div>
                 <div class="menu">
-                    <h3><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/About.html" target="_blank" rel="noopener noreferrer">About</a></h3>
+                    <h3><a href="About.html" target="_blank" rel="noopener noreferrer">About</a></h3>
                     <ul>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/About.html" target="_blank" rel="noopener noreferrer">About the blog</a></li>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/About.html" target="_blank" rel="noopener noreferrer">About me</a></li>
+                        <li><a href="About.html" target="_blank" rel="noopener noreferrer">About the blog</a></li>
+                        <li><a href="About.html" target="_blank" rel="noopener noreferrer">About me</a></li>
                     </ul>
                 </div>
                 <div class="menu">
-                    <h3><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/tbr.html" target="_blank" rel="noopener noreferrer">TBR</a></h3>
+                    <h3><a href="tbr.html" target="_blank" rel="noopener noreferrer">TBR</a></h3>
                     <ul>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/tbr.html" target="_blank" rel="noopener noreferrer">KU Top Reads</a></li>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/tbr.html" target="_blank" rel="noopener noreferrer">All Time Favorites</a></li>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/tbr.html" target="_blank" rel="noopener noreferrer">Tropes</a></li>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/tbr.html" target="_blank" rel="noopener noreferrer">Reading Orders</a></li>
+                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">KU Top Reads</a></li>
+                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">All Time Favorites</a></li>
+                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">Tropes</a></li>
+                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">Reading Orders</a></li>
                     </ul>
                 </div>
                 <div class="menu">
@@ -57,14 +56,14 @@
             </div>
         </header>
         <div class="containerone">
-            <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/cartoon.jpg">
-            <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/cloud.png">
+            <img src="Images/cartoon.jpg">
+            <img src="Images/cloud.png">
             <h4>Hey, Story Sweeties! 💕</h4>
             <p>Okay, lovelies, it’s official—you all are now my Story Sweeties! 🍵📚✨ Whether you’re vibing with a good book or binge-reading a new series, we’re in this together. 
             I wanted to give you all a cute name because this isn’t just a blog—it’s our little cozy corner of the internet where we connect over the feels and the fire reads.
             Think of it like this: you’ve got your tea, your fave book, and now you’ve got a squad—aka, the Story Sweeties—here to share the love for tender, heartwarming stories. We’re all about the cozy vibes, deep feels, and keeping it real in the book world. 💫
             So grab your cozy spot, pour yourself something warm, and let’s get lost in these stories together. Welcome to the crew, lovelies! 💖</p>
-            <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/wheels.png">
+            <img src="Images/wheels.png">
         </div>
        <div class="two"><h2>Reading Challenges</h2></div> 
        <div class="containertwo" id="readingchallenges">
@@ -95,12 +94,12 @@
                 <h6><em>The Holiday Swap</em> by Maggie Knox – Twin sisters trade places for the holidays, bringing double the romance.</h6>
                 <h6><em>Meet Me Under the Mistletoe</em> by Jenny Bayliss – Friends-to-lovers with a festive, wintry backdrop.</h6>
             </div>
-            <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/wheels.png">
+            <img src="Images/wheels.png">
         </div>
         <div class="containerthree" id="monthlyread">
             <div class="three"><h2>Monthly Read</h2></div>
                 <div>
-                    <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/maxton.jpg">
+                    <img src="Images/maxton.jpg">
                 </div>
                 <div>
                     <h5>Save Me by Mona Kasten: A Story Sweeties Must-Read 💖</h5>
@@ -119,7 +118,7 @@
         <div class="containerfour" id="teaofthemonth">
             <div class="four"><h2>Tea of the Month</h2></div>
             <div>
-                <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/chamomile tea.jpg" alt="chamomile tea">
+                <img src="Images/chamomile tea.jpg" alt="chamomile tea">
             </div>
             <div>
                 <h5>Chamomile, but Make It Cozy! 🍵✨</h5>
@@ -127,14 +126,14 @@
                 <h6>Whether I’m curled up with a slow-burn love story or diving into an enemies-to-lovers trope, this chamomile tea is always by my side. So, if you’ve never tried it with milk and honey, take this as your sign to give it a go. Trust me—it’s a total game-changer! ☁️✨</h6>
                 <h6>What’s your go-to tea for those quiet, bookish moments? Let me know—I’m always looking for new ways to make my tea game as heartwarming as the stories I read. 🫖💕</h6>
             </div>
-            <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/wheels.png">
+            <img src="Images/wheels.png">
         </div>
         <footer>
             <h3>Copyright 2024</h3>
             <h3>Privacy Policy</h3>
             <h3>Created by Fabienne HALLOIN</h3>
-            <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/insta.png">
-            <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/tiktok.png">
+            <img src="Images/insta.png">
+            <img src="Images/tiktok.png">
         </footer>
     </body>
 </html>
