this should do it

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
             <div class="leftside">
                 <div>
-                    <img src="images/logo.png">
+                    <img src="Images/logo.png">
                 </div>
                 <div><h1>Tea, Tales & Tender Hearts</h1></div>
             </div>
