--- a/About.html
+++ b/About.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="icon" type="image/png" href="/Users/fabiennehalloin/Desktop/3Ts/Website/image 3.png">
         <title>About - Tea, Tales & Tender Hearts</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/Users/fabiennehalloin/Desktop/3Ts/Website/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,800&family=Fondamento:ital@0;1&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,800&family=Fondamento:ital@0;1&family=Solway:wght@300;400;500;700;800&display=swap" rel="stylesheet">
-        <script src="/Users/fabiennehalloin/Desktop/3Ts/Website/script.js" defer></script>
+        <script src="scripts/script.js" defer></script>
     </head>
     <body id="aboutpage">
         <header>
             <div class="leftside">
                 <div>
-                    <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/logo.png">
+                    <img src="Images/logo.png">
                 </div>
                 <div><h1>Tea, Tales & Tender Hearts</h1></div>
             </div>
             <div class="nav">
                 <div class=menu>
-                    <h3><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/index.html" target="_blank" rel="noopener noreferrer">Homepage</a></h3>
+                    <h3><a href="index.html" target="_blank" rel="noopener noreferrer">Homepage</a></h3>
                     <ul>
                         <li><a href="#readingchallenges">Reading Challenges</a></li>
                         <li><a href="#monthlyread">Monthly Read</a></li>
@@ -31,19 +30,19 @@
                     </ul>
                 </div>
                 <div class="menu">
-                    <h3><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/About.html" target="_blank" rel="noopener noreferrer">About</a></h3>
+                    <h3><a href="About.html" target="_blank" rel="noopener noreferrer">About</a></h3>
                     <ul>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/About.html" target="_blank" rel="noopener noreferrer">About the blog</a></li>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/About.html" target="_blank" rel="noopener noreferrer">About me</a></li>
+                        <li><a href="About.html" target="_blank" rel="noopener noreferrer">About the blog</a></li>
+                        <li><a href="About.html" target="_blank" rel="noopener noreferrer">About me</a></li>
                     </ul>
                 </div>
                 <div class="menu">
-                    <h3><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/tbr.html" target="_blank" rel="noopener noreferrer">TBR</a></h3>
+                    <h3><a href="tbr.html" target="_blank" rel="noopener noreferrer">TBR</a></h3>
                     <ul>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/tbr.html" target="_blank" rel="noopener noreferrer">KU Top Reads</a></li>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/tbr.html" target="_blank" rel="noopener noreferrer">All Time Favorites</a></li>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/tbr.html" target="_blank" rel="noopener noreferrer">Tropes</a></li>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/tbr.html" target="_blank" rel="noopener noreferrer">Reading Orders</a></li>
+                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">KU Top Reads</a></li>
+                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">All Time Favorites</a></li>
+                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">Tropes</a></li>
+                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">Reading Orders</a></li>
                     </ul>
                 </div>
                 <div class="menu">
@@ -62,7 +61,7 @@
                 <h6>Welcome to Tea, Tales, and Tender Hearts! This is where I share my love for romance novels and all the things that make stories so magical. I created this space to connect with fellow readers who appreciate heartfelt tales, swoon-worthy characters, and those moments that just make you believe in love.</h6>
                 <h6>I wanted to build a cozy corner of the internet where we can talk about books, share recommendations, and dive into the emotions that make romance such a powerful genre. Whether it's a steamy romance or a heartwarming love story, I’m here to explore it all with you. From book reviews to reading challenges and author spotlights, this blog is dedicated to celebrating the books that make us feel something. So, grab your favorite drink and get comfortable—let's chat about the stories that stay with us long after we turn the last page.</h6>
                 <h6>But Tea, Tales, and Tender Hearts isn’t just about books—it’s about creating a space where we can all feel seen and heard. I want to build a community of readers who love to explore new genres, authors, and perspectives. Whether you’re new to the world of romance or a seasoned reader looking for fresh recommendations, you’ll find a little something here for everyone. And, as I grow this blog, I hope to highlight diverse voices in romance, because every love story deserves to be told.</h6>
-                <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/roundbook.png">
+                <img src="Images/roundbook.png">
             </div>
             <div>
                 <h5>About Me: Just Little Old Me 💕</h5>
@@ -70,7 +69,7 @@
                 <h6>I’m currently pursuing a master’s degree in multilingual web communication, which blends my passion for digital design and language. I’m fluent in English, Spanish, and French, and I’m working on improving my Portuguese. My love for languages ties closely with my interest in discovering different cultures, especially through food. I find food to be such a deep and personal way to connect with people and their stories, which is why I’m always on the lookout for new culinary experiences when I travel.</h6>
                 <h6>When I’m not diving into books or exploring new places, I’m likely working on my website or thinking about how to make this blog even more interactive and fun for everyone. Whether I’m working on digital projects, sharing book reviews, or exploring new cultures, I love finding ways to make my passions come together. </h6>
                 <h6>Tea, Tales, and Tender Hearts is still in its early stages, but I’m excited to grow this space and connect with fellow readers from all walks of life. I want to make this blog a place where we can enjoy great books, celebrate romance, and bond over the things that make life so beautiful.</h6>
-                <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/roundme.png">
+                <img src="Images/roundme.png">
             </div>
             
         </div>
@@ -78,8 +77,8 @@
             <h3>Copyright 2024</h3>
             <h3>Privacy Policy</h3>
             <h3>Created by Fabienne HALLOIN</h3>
-            <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/insta.png">
-            <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/tiktok.png">
+            <img src="Images/insta.png">
+            <img src="Images/tiktok.png">
         </footer>
     </body>
 </html>
