--- a/tbr.html
+++ b/tbr.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="icon" type="image/png" href="/Users/fabiennehalloin/Desktop/3Ts/Website/image 3.png">
         <title>TBR - Tea, Tales & Tender Hearts</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="/Users/fabiennehalloin/Desktop/3Ts/Website/style.css">
@@ -11,19 +10,19 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,800&family=Fondamento:ital@0;1&family=Solway:wght@300;400;500;700;800&display=swap" rel="stylesheet">
-        <script src="/Users/fabiennehalloin/Desktop/3Ts/Website/script.js" defer></script>
+        <script src="scripts/script.js" defer></script>
     </head>
     <body id="tbr">
         <header>
             <div class="leftside">
                 <div>
-                    <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/logo.png">
+                    <img src="Images/logo.png">
                 </div>
                 <div><h1>Tea, Tales & Tender Hearts</h1></div>
             </div>
             <div class="nav">
                 <div class=menu>
-                    <h3><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/index.html" target="_blank" rel="noopener noreferrer">Homepage</a></h3>
+                    <h3><a href="index.html" target="_blank" rel="noopener noreferrer">Homepage</a></h3>
                     <ul>
                         <li><a href="#readingchallenges">Reading Challenges</a></li>
                         <li><a href="#monthlyread">Monthly Read</a></li>
@@ -31,19 +30,19 @@
                     </ul>
                 </div>
                 <div class="menu">
-                    <h3><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/About.html" target="_blank" rel="noopener noreferrer">About</a></h3>
+                    <h3><a href="About.html" target="_blank" rel="noopener noreferrer">About</a></h3>
                     <ul>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/About.html" target="_blank" rel="noopener noreferrer">About the blog</a></li>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/About.html" target="_blank" rel="noopener noreferrer">About me</a></li>
+                        <li><a href="About.html" target="_blank" rel="noopener noreferrer">About the blog</a></li>
+                        <li><a href="About.html" target="_blank" rel="noopener noreferrer">About me</a></li>
                     </ul>
                 </div>
                 <div class="menu">
-                    <h3><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/tbr.html" target="_blank" rel="noopener noreferrer">TBR</a></h3>
+                    <h3><a href="tbr.html" target="_blank" rel="noopener noreferrer">TBR</a></h3>
                     <ul>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/tbr.html" target="_blank" rel="noopener noreferrer">KU Top Reads</a></li>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/tbr.html" target="_blank" rel="noopener noreferrer">All Time Favorites</a></li>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/tbr.html" target="_blank" rel="noopener noreferrer">Tropes</a></li>
-                        <li><a href="/Users/fabiennehalloin/Desktop/3Ts/Website/tbr.html" target="_blank" rel="noopener noreferrer">Reading Orders</a></li>
+                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">KU Top Reads</a></li>
+                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">All Time Favorites</a></li>
+                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">Tropes</a></li>
+                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">Reading Orders</a></li>
                     </ul>
                 </div>
                 <div class="menu">
@@ -61,9 +60,9 @@
             <div class="carousel">
                 <button class="prev" onclick="prevSlide('carousel1')">&#10094;</button>
                 <div class="carousel-content" id="carousel1">
-                    <div class="slide"><img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/Play Along.jpg" alt="Play Along"></div>
-                    <div class="slide"><img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/The Striker.jpg" alt="The Striker"></div>
-                    <div class="slide"><img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/Between Never and Forever.jpg" alt="Between Never and Forever"></div>
+                    <div class="slide"><img src="Images/Play Along.jpg" alt="Play Along"></div>
+                    <div class="slide"><img src="Images/The Striker.jpg" alt="The Striker"></div>
+                    <div class="slide"><img src="Images/Between Never and Forever.jpg" alt="Between Never and Forever"></div>
                 </div>
                 <button class="next" onclick="nextSlide('carousel1')">&#10095;</button>
                 <h4>KU Top Reads</h4>
@@ -73,9 +72,9 @@
             <div class="carousel">
                 <button class="prev" onclick="prevSlide('carousel2')">&#10094;</button>
                 <div class="carousel-content" id="carousel2">
-                    <div class="slide"><img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/All time favorites/The Predator.jpg" alt="The Predator"></div>
-                    <div class="slide"><img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/All time favorites/Tempted by the Devil.jpg" alt="Tempted by the Devil"></div>
-                    <div class="slide"><img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/All time favorites/Devious Lies.jpg" alt="Devious Lies"></div>
+                    <div class="slide"><img src="Images/All time favorites/The Predator.jpg" alt="The Predator"></div>
+                    <div class="slide"><img src="Images/All time favorites/Tempted by the Devil.jpg" alt="Tempted by the Devil"></div>
+                    <div class="slide"><img src="Images/All time favorites/Devious Lies.jpg" alt="Devious Lies"></div>
                 </div>
                 <button class="next" onclick="nextSlide('carousel2')">&#10095;</button>
                 <h4>All Time Favorites</h4>
@@ -85,8 +84,8 @@
             <h3>Copyright 2024</h3>
             <h3>Privacy Policy</h3>
             <h3>Created by Fabienne HALLOIN</h3>
-            <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/insta.png">
-            <img src="/Users/fabiennehalloin/Desktop/3Ts/Website/Images/tiktok.png">
+            <img src="Images/insta.png">
+            <img src="Images/tiktok.png">
         </footer>
     </body>
 </html>
