--- a/tbr.html
+++ b/tbr.html
@@ -3,7 +3,7 @@
     <head>
         <title>TBR - Tea, Tales & Tender Hearts</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/Users/fabiennehalloin/Desktop/3Ts/Website/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,800&family=Fondamento:ital@0;1&display=swap" rel="stylesheet">
