--- a/tbr.html
+++ b/tbr.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,800&family=Fondamento:ital@0;1&family=Solway:wght@300;400;500;700;800&display=swap" rel="stylesheet">
-        <script src="scripts/script.js" defer></script>
+        <script src="script.js" defer></script>
     </head>
     <body id="tbr">
         <header>
