After some feedback, I was made aware that where there is a lot of text, it was too bold so i changed the texts from h6 to p

--- a/index.html
+++ b/index.html
@@ -71,28 +71,28 @@
                 <h5>The Charming Challenge: Read 10 Romance Books Starting with the Letter C</h5>
                 <h6>Goal: Explore romance books that start with "C" and discover hidden gems with this fun letter-themed challenge.</h6>
                 <h6>Suggestions to Get Started:</h6>
-                <h6><em>Catch Me If You Can</em> by Christina C. Jones – A steamy and fast-paced romance by an indie favorite.</h6>
-                <h6><em>Crave</em> by Tracy Wolff – For fans of paranormal romance with intense chemistry.</h6>
-                <h6><em>Cinderella and the Duke</em> by Lydia Drake – A charming historical romance with a twist on the classic fairy tale.</h6>
-                <h6><em>Claimed</em> by Cupid by Dana Isaly – A quirky romance with a touch of mythology.</h6>
+                <p><em>Catch Me If You Can</em> by Christina C. Jones – A steamy and fast-paced romance by an indie favorite.</p>
+                <p><em>Crave</em> by Tracy Wolff – For fans of paranormal romance with intense chemistry.</p>
+                <p><em>Cinderella and the Duke</em> by Lydia Drake – A charming historical romance with a twist on the classic fairy tale.</p>
+                <p><em>Claimed</em> by Cupid by Dana Isaly – A quirky romance with a touch of mythology.</p>
             </div>
             <div>
                 <h5>The Heartfelt Horizons Challenge: Read 10 Romance Books by Authors of Color</h5>
                 <h6>Goal: Broaden your reading horizons by exploring heartfelt romances by diverse authors.</h6>
                 <h6>Suggestions to Get Started:</h6>
-                <h6><em>Before I Let Go</em> by Kennedy Ryan – A poignant, second-chance romance full of emotional depth.</h6>
-                <h6><em>Ties That Tether</em> by Jane Igharo – A story of love, culture, and self-discovery.</h6>
-                <h6><em>A Taste of Sage</em> by Yaffa S. Santos – A foodie romance with a sprinkle of magical realism.</h6>
-                <h6><em>You Made a Fool of Death with Your Beauty</em> by Akwaeke Emezi – A bold and lyrical romance about healing and passion.</h6>
+                <p><em>Before I Let Go</em> by Kennedy Ryan – A poignant, second-chance romance full of emotional depth.</p>
+                <p><em>Ties That Tether</em> by Jane Igharo – A story of love, culture, and self-discovery.</p>
+                <p><em>A Taste of Sage</em> by Yaffa S. Santos – A foodie romance with a sprinkle of magical realism.</p>
+                <p><em>You Made a Fool of Death with Your Beauty</em> by Akwaeke Emezi – A bold and lyrical romance about healing and passion.</p>
             </div>
             <div>
                 <h5>The Cozy Christmas Challenge: Read 10 Romance Books with a Christmas Theme</h5>
                 <h6>Goal: Embrace the magic of the holidays through cozy, festive romances that warm the heart.</h6>
                 <h6>Suggestions to Get Started:</h6>
-                <h6><em>In a New York Minute</em> by Kate Spencer – A sparkling, feel-good holiday romance set in the city.</h6>
-                <h6><em>Window Shopping</em> by Tessa Bailey – A steamy and quirky romance perfect for the holiday vibe.</h6>
-                <h6><em>The Holiday Swap</em> by Maggie Knox – Twin sisters trade places for the holidays, bringing double the romance.</h6>
-                <h6><em>Meet Me Under the Mistletoe</em> by Jenny Bayliss – Friends-to-lovers with a festive, wintry backdrop.</h6>
+                <p><em>In a New York Minute</em> by Kate Spencer – A sparkling, feel-good holiday romance set in the city.</p>
+                <p><em>Window Shopping</em> by Tessa Bailey – A steamy and quirky romance perfect for the holiday vibe.</p>
+                <p><em>The Holiday Swap</em> by Maggie Knox – Twin sisters trade places for the holidays, bringing double the romance.</p>
+                <p><em>Meet Me Under the Mistletoe</em> by Jenny Bayliss – Friends-to-lovers with a festive, wintry backdrop.</p>
             </div>
             <img src="Images/wheels.png">
         </div>
@@ -103,7 +103,7 @@
                 </div>
                 <div>
                     <h5>Save Me by Mona Kasten: A Story Sweeties Must-Read 💖</h5>
-                    <h6>Imagine a world where the quiet bookish girl crosses paths with the untouchable golden boy. 
+                    <p>Imagine a world where the quiet bookish girl crosses paths with the untouchable golden boy. 
                     That’s Save Me by Mona Kasten—a swoon-worthy romance filled with opposites-attract energy, secrets, and just the right amount of drama. 📚✨
                     Ruby Bell has her life all planned out: work hard, stay invisible, and get out of her small town for good. <br>
                     Enter James Beaufort, the rich, effortlessly cool bad boy who thrives on breaking rules and turning heads. When their worlds collide, sparks fly (and not always the good kind). 
@@ -111,7 +111,7 @@
                     With heart-melting moments, sharp banter, and the kind of chemistry that makes your heart race, Save Me is perfect for anyone who loves enemies-to-lovers vibes with a soft edge. 
                     It’s got all the feels and then some—like the literary equivalent of sipping your favorite tea on a rainy day. 🍵🌧️ <br>
                     So, lovelies, grab a cozy blanket, your favorite mug, and settle in for a story that’ll make your heart ache in the best way. 
-                    Ready to dive into the world of Ruby and James? You’re gonna love it! 💕 </h6>
+                    Ready to dive into the world of Ruby and James? You’re gonna love it! 💕 </p>
                     <h6>#StorySweetiesApproved 📖✨</h6>
                 </div>
         </div>
@@ -122,9 +122,9 @@
             </div>
             <div>
                 <h5>Chamomile, but Make It Cozy! 🍵✨</h5>
-                <h6>Chamomile tea is a classic, but let me spill the tea (literally) on how I make it extra special. Forget the water, lovelies—I make my chamomile tea entirely with milk. Yes, you heard that right. The result? A creamy, dreamy cup of comfort that feels like a warm hug in a mug. Add a drizzle of honey for sweetness, and you’ve got yourself the perfect sip for cozy reading sessions. 💛</h6>
-                <h6>Whether I’m curled up with a slow-burn love story or diving into an enemies-to-lovers trope, this chamomile tea is always by my side. So, if you’ve never tried it with milk and honey, take this as your sign to give it a go. Trust me—it’s a total game-changer! ☁️✨</h6>
-                <h6>What’s your go-to tea for those quiet, bookish moments? Let me know—I’m always looking for new ways to make my tea game as heartwarming as the stories I read. 🫖💕</h6>
+                <p>Chamomile tea is a classic, but let me spill the tea (literally) on how I make it extra special. Forget the water, lovelies—I make my chamomile tea entirely with milk. Yes, you heard that right. The result? A creamy, dreamy cup of comfort that feels like a warm hug in a mug. Add a drizzle of honey for sweetness, and you’ve got yourself the perfect sip for cozy reading sessions. 💛</p>
+                <p>Whether I’m curled up with a slow-burn love story or diving into an enemies-to-lovers trope, this chamomile tea is always by my side. So, if you’ve never tried it with milk and honey, take this as your sign to give it a go. Trust me—it’s a total game-changer! ☁️✨</p>
+                <p>What’s your go-to tea for those quiet, bookish moments? Let me know—I’m always looking for new ways to make my tea game as heartwarming as the stories I read. 🫖💕</p>
             </div>
             <img src="Images/wheels.png">
         </div>
