changing container two to carousel

--- a/index.html
+++ b/index.html
@@ -67,34 +67,38 @@
             <img src="Images/wheels.png">
         </div>
        <div class="two"><h2>Reading Challenges</h2></div> 
-       <div class="containertwo" id="readingchallenges">
-            <div>
-                <h5>The Charming Challenge: Read 10 Romance Books Starting with the Letter C</h5>
-                <h6>Goal: Explore romance books that start with "C" and discover hidden gems with this fun letter-themed challenge.</h6>
-                <h6>Suggestions to Get Started:</h6>
-                <p><em>Catch Me If You Can</em> by Christina C. Jones – A steamy and fast-paced romance by an indie favorite.</p>
-                <p><em>Crave</em> by Tracy Wolff – For fans of paranormal romance with intense chemistry.</p>
-                <p><em>Cinderella and the Duke</em> by Lydia Drake – A charming historical romance with a twist on the classic fairy tale.</p>
-                <p><em>Claimed</em> by Cupid by Dana Isaly – A quirky romance with a touch of mythology.</p>
-            </div>
-            <div>
-                <h5>The Heartfelt Horizons Challenge: Read 10 Romance Books by Authors of Color</h5>
-                <h6>Goal: Broaden your reading horizons by exploring heartfelt romances by diverse authors.</h6>
-                <h6>Suggestions to Get Started:</h6>
-                <p><em>Before I Let Go</em> by Kennedy Ryan – A poignant, second-chance romance full of emotional depth.</p>
-                <p><em>Ties That Tether</em> by Jane Igharo – A story of love, culture, and self-discovery.</p>
-                <p><em>A Taste of Sage</em> by Yaffa S. Santos – A foodie romance with a sprinkle of magical realism.</p>
-                <p><em>You Made a Fool of Death with Your Beauty</em> by Akwaeke Emezi – A bold and lyrical romance about healing and passion.</p>
-            </div>
-            <div>
-                <h5>The Cozy Christmas Challenge: Read 10 Romance Books with a Christmas Theme</h5>
-                <h6>Goal: Embrace the magic of the holidays through cozy, festive romances that warm the heart.</h6>
-                <h6>Suggestions to Get Started:</h6>
-                <p><em>In a New York Minute</em> by Kate Spencer – A sparkling, feel-good holiday romance set in the city.</p>
-                <p><em>Window Shopping</em> by Tessa Bailey – A steamy and quirky romance perfect for the holiday vibe.</p>
-                <p><em>The Holiday Swap</em> by Maggie Knox – Twin sisters trade places for the holidays, bringing double the romance.</p>
-                <p><em>Meet Me Under the Mistletoe</em> by Jenny Bayliss – Friends-to-lovers with a festive, wintry backdrop.</p>
-            </div>
+       <div class="carousel-container">
+            <button class="carousel-btn prev-btn">&lt;</button>
+            <div class="carousel" id="readingchallenges">
+                <div class="card">
+                    <h5>The Charming Challenge: Read 10 Romance Books Starting with the Letter C</h5>
+                    <h6>Goal: Explore romance books that start with "C" and discover hidden gems with this fun letter-themed challenge.</h6>
+                    <h6>Suggestions to Get Started:</h6>
+                    <p><em>Catch Me If You Can</em> by Christina C. Jones – A steamy and fast-paced romance by an indie favorite.</p>
+                    <p><em>Crave</em> by Tracy Wolff – For fans of paranormal romance with intense chemistry.</p>
+                    <p><em>Cinderella and the Duke</em> by Lydia Drake – A charming historical romance with a twist on the classic fairy tale.</p>
+                    <p><em>Claimed</em> by Cupid by Dana Isaly – A quirky romance with a touch of mythology.</p>
+                </div>
+                <div class="card">
+                    <h5>The Heartfelt Horizons Challenge: Read 10 Romance Books by Authors of Color</h5>
+                    <h6>Goal: Broaden your reading horizons by exploring heartfelt romances by diverse authors.</h6>
+                    <h6>Suggestions to Get Started:</h6>
+                    <p><em>Before I Let Go</em> by Kennedy Ryan – A poignant, second-chance romance full of emotional depth.</p>
+                    <p><em>Ties That Tether</em> by Jane Igharo – A story of love, culture, and self-discovery.</p>
+                    <p><em>A Taste of Sage</em> by Yaffa S. Santos – A foodie romance with a sprinkle of magical realism.</p>
+                    <p><em>You Made a Fool of Death with Your Beauty</em> by Akwaeke Emezi – A bold and lyrical romance about healing and passion.</p>
+                </div>
+                <div class="card">
+                    <h5>The Cozy Christmas Challenge: Read 10 Romance Books with a Christmas Theme</h5>
+                    <h6>Goal: Embrace the magic of the holidays through cozy, festive romances that warm the heart.</h6>
+                    <h6>Suggestions to Get Started:</h6>
+                    <p><em>In a New York Minute</em> by Kate Spencer – A sparkling, feel-good holiday romance set in the city.</p>
+                    <p><em>Window Shopping</em> by Tessa Bailey – A steamy and quirky romance perfect for the holiday vibe.</p>
+                    <p><em>The Holiday Swap</em> by Maggie Knox – Twin sisters trade places for the holidays, bringing double the romance.</p>
+                    <p><em>Meet Me Under the Mistletoe</em> by Jenny Bayliss – Friends-to-lovers with a festive, wintry backdrop.</p>
+                </div>
+            <button class="carousel-btn next-btn">&gt;</button>
+        </div>
             <img src="Images/wheels.png">
         </div>
         <div class="containerthree" id="monthlyread">
